Update default language

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "enablePorofessor": false,
     "enableAdvancedSettings": false,
-    "language": "es",
+    "language": "en",
     "profile": {
         "region": "las",
         "username": "",
